apply flexbox to create column

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <div class="container">
         <section class="hero-images">
-            <div class="hero-img"><img class="big-img" src="https://image.freepik.com/free-photo/empty-living-room-with-blue-fabric-sofa-lamp-plants-3d-rendering_46483-351.jpg" alt="image of sofa"></div>
-            <img src="https://image.freepik.com/free-photo/living-room-interior-with-velvet-sofa-table-3d-rendering_46483-367.jpg" alt="image of sofa">
-            <img src="https://image.freepik.com/free-photo/interior-mock-up-living-room-with-white-sofa-3d-rendering_46483-854.jpg" alt="image of sofa">
-            <img src="https://image.freepik.com/free-photo/white-interior-double-frames-mockup_1961-32.jpg" alt="image of sofa">
-            <img src="https://image.freepik.com/free-photo/mock-up-poster-frame-living-room-interior-background_42637-750.jpg" alt="image of sofa">
-            <img src="https://image.freepik.com/free-photo/christmas-background-double-frames-mockup_1961-79.jpg" alt="image of sofa">
+            <div class="big-img"><img src="https://image.freepik.com/free-photo/empty-living-room-with-blue-fabric-sofa-lamp-plants-3d-rendering_46483-351.jpg" alt="image of sofa"></div>
+            <div class="small-imgs">
+                <img class="small-img" src="https://image.freepik.com/free-photo/living-room-interior-with-velvet-sofa-table-3d-rendering_46483-367.jpg" alt="image of sofa">
+                <img class="small-img" src="https://image.freepik.com/free-photo/interior-mock-up-living-room-with-white-sofa-3d-rendering_46483-854.jpg" alt="image of sofa">
+                <img class="small-img" src="https://image.freepik.com/free-photo/white-interior-double-frames-mockup_1961-32.jpg" alt="image of sofa">
+                <img class="small-img" src="https://image.freepik.com/free-photo/mock-up-poster-frame-living-room-interior-background_42637-750.jpg" alt="image of sofa">
+                <img class="small-img" src="https://image.freepik.com/free-photo/christmas-background-double-frames-mockup_1961-79.jpg" alt="image of sofa">
+            </div>
         </section>
     
         <section class="hero">
