add style of buttons

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="price">$567</p>
     
             <p>Dispatched in 7 working days</p>
-            <button>ADD TO CART</button>
+            <button class="add-to-cart">ADD TO CART</button>
             <button>ADD TO WHISLIST</button>
         </section>
     </div>
