give style to footer area

--- a/index.html
+++ b/index.html
@@ -16,55 +16,59 @@
   <title>Assignment</title>
 </head>
 <body>
-  <div class="container">
-    <section class="hero-images">
-        <div class="big-img"><img src="https://cdn.shopify.com/s/files/1/0244/9349/0240/products/product-image-1288613218_800x.jpg?v=1583517612" alt="image of sofa"></div>
-        <div class="small-imgs">
-          <img class="small-img" src="https://image.freepik.com/free-photo/living-room-interior-with-velvet-sofa-table-3d-rendering_46483-367.jpg" alt="image of sofa">
-          <img class="small-img" src="https://image.freepik.com/free-photo/interior-mock-up-living-room-with-white-sofa-3d-rendering_46483-854.jpg" alt="image of sofa">
-          <img class="small-img" src="https://image.freepik.com/free-photo/white-interior-double-frames-mockup_1961-32.jpg" alt="image of sofa">
-          <img class="small-img" src="https://image.freepik.com/free-photo/mock-up-poster-frame-living-room-interior-background_42637-750.jpg" alt="image of sofa">
-          <img class="small-img" src="https://image.freepik.com/free-photo/christmas-background-double-frames-mockup_1961-79.jpg" alt="image of sofa">
+  <div class="main">
+    <div class="container container-hero">
+      <section class="hero-images">
+          <div class="big-img"><img src="https://cdn.shopify.com/s/files/1/0244/9349/0240/products/product-image-1288613218_800x.jpg?v=1583517612" alt="image of sofa"></div>
+          <div class="small-imgs">
+            <img class="small-img" src="https://image.freepik.com/free-photo/living-room-interior-with-velvet-sofa-table-3d-rendering_46483-367.jpg" alt="image of sofa">
+            <img class="small-img" src="https://image.freepik.com/free-photo/interior-mock-up-living-room-with-white-sofa-3d-rendering_46483-854.jpg" alt="image of sofa">
+            <img class="small-img" src="https://image.freepik.com/free-photo/white-interior-double-frames-mockup_1961-32.jpg" alt="image of sofa">
+            <img class="small-img" src="https://image.freepik.com/free-photo/mock-up-poster-frame-living-room-interior-background_42637-750.jpg" alt="image of sofa">
+            <img class="small-img" src="https://image.freepik.com/free-photo/christmas-background-double-frames-mockup_1961-79.jpg" alt="image of sofa">
+          </div>
+      </section>
+  
+      <section class="hero">
+        <h1 style="font-family: 'DM Serif Display', serif;">Upholstered Sofa</h1>
+        <p class="hero-subheading">Kyara Upholstered Standard Bed by <br> Zipcode Design<p>
+        <p class="hero-description">Anchor your living room in sophisticated style and impeccable comfort with single addition. Perfectly balancing wood accents with fabric upholstery.</p>
+  
+        <div class="rating">
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
+          <i class="fa fa-star"></i>
         </div>
-    </section>
-
-    <section class="hero">
-      <h1 style="font-family: 'DM Serif Display', serif;">Upholstered Sofa</h1>
-      <p class="hero-subheading">Kyara Upholstered Standard Bed by <br> Zipcode Design<p>
-      <p class="hero-description">Anchor your living room in sophisticated style and impeccable comfort with single addition. Perfectly balancing wood accents with fabric upholstery.</p>
-
-      <div class="rating">
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
-        <i class="fa fa-star"></i>
+        <p class="review"><span class="review-span">(5.0)</span> review based on 250</p>
+        <p class="submit-review">Submit Review</p>
+        <p class="price">$567</p>
+  
+        <p class="dispatched"><i class="fa fa-clock-o"></i> Dispatched in 7 working days</p>
+        <button class="add-to-cart">ADD TO CART</button>
+        <button>ADD TO WHISLIST</button>
+      </section>
+    </div>
+  
+    <footer>
+      <div class="footer-container">
+        <div class="features">
+          <p class="features-heading"><i class="fa fa-lock"></i> Secure Payment</p>
+          <p class="feature-desc">Don't worry, your money is in secure places</p>
+        </div>
+    
+        <div class="features">
+          <p class="features-heading"><i class="fa fa-truck"></i> Fast & free delivery</p>
+          <p class="feature-desc">Home delivery $15 For free delivery order over $250</p>
+        </div>
+    
+        <div class="features">
+          <p class="features-heading"><i class="fa fa-lock"></i> Return policy</p>
+          <p class="feature-desc">No hassle return policy</p>
+        </div>
       </div>
-      <p class="review"><span class="review-span">(5.0)</span> review based on 250</p>
-      <p class="submit-review">Submit Review</p>
-      <p class="price">$567</p>
-
-      <p class="dispatched"><i class="fa fa-clock-o"></i> Dispatched in 7 working days</p>
-      <button class="add-to-cart">ADD TO CART</button>
-      <button>ADD TO WHISLIST</button>
-    </section>
+    </footer>
   </div>
-
-  <footer>
-    <div class="features">
-      <h3><i class="fa fa-lock"></i> Secure Payment</h3>
-      <p>Don't worry, your money is in secure places</p>
-    </div>
-
-    <div class="features">
-      <h3><i class="fa fa-truck"></i> Fast & free delivery</h3>
-      <p>Home delivery $15 For free delivery order over $250</p>
-    </div>
-
-    <div class="features">
-      <h3><i class="fa fa-lock"></i>Return policy</h3>
-      <p>No hassle return policy</p>
-    </div>
-  </footer>
 </body>
 </html>
