add images folder

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body>
   <div class="container">
     <section class="hero-images">
-        <div class="big-img"><img src="https://cdn.shopify.com/s/files/1/0244/9349/0240/products/product-image-1288613218_800x.jpg?v=1583517612" alt="image of sofa"></div>
+        <div class="big-img"><img src="images/big-image.jpg" alt="image of sofa"></div>
         <div class="small-imgs">
-          <img class="small-img" src="https://image.freepik.com/free-photo/living-room-interior-with-velvet-sofa-table-3d-rendering_46483-367.jpg" alt="image of sofa">
-          <img class="small-img" src="https://image.freepik.com/free-photo/interior-mock-up-living-room-with-white-sofa-3d-rendering_46483-854.jpg" alt="image of sofa">
-          <img class="small-img" src="https://image.freepik.com/free-photo/white-interior-double-frames-mockup_1961-32.jpg" alt="image of sofa">
-          <img class="small-img" src="https://image.freepik.com/free-photo/mock-up-poster-frame-living-room-interior-background_42637-750.jpg" alt="image of sofa">
-          <img class="small-img" src="https://image.freepik.com/free-photo/christmas-background-double-frames-mockup_1961-79.jpg" alt="image of sofa">
+          <img class="small-img" src="images/small-image1.jpg" alt="image of sofa">
+          <img class="small-img" src="images/small-image2.jpg" alt="image of sofa">
+          <img class="small-img" src="images/small-image3.jpg" alt="image of sofa">
+          <img class="small-img" src="images/small-image4.jpg" alt="image of sofa">
+          <img class="small-img" src="images/small-image5.jpg" alt="image of sofa">
         </div>
     </section>
 
@@ -63,7 +63,7 @@
       </div>
   
       <div class="features">
-        <p class="features-heading"><i class="fa fa-lock"></i> Return policy</p>
+        <p class="features-heading"><i class="fa fa-archive"></i> Return policy</p>
         <p class="feature-desc">No hassle return policy</p>
       </div>
     </div>
